ufgt-template.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: (hostname)-https
spec:
  selector:
    vm.kubevirt.io/name: (hostname)
  ports:
  - protocol: TCP
    port: 443
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: (hostname)
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: (hostname).k8s.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: (hostname)-https
            port:
              number: 443
